deploy: a31f6c6cf443224fb3bcc3c4d2b9c41d52d87265

--- a/intro.html
+++ b/intro.html
@@ -25,7 +25,7 @@
     href="_static/vendor/lato_latin-ext/1.44.1/index.css">
 
     
-    <link rel="stylesheet" href="_static/sphinx-book-theme.37f24b989f4638ff9c27c22dc7559d4f.css" type="text/css" />
+    <link rel="stylesheet" href="_static/sphinx-book-theme.e7340bb3dbd8dde6db86f25597f54a1b.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/togglebutton.css" />
     <link rel="stylesheet" type="text/css" href="_static/copybutton.css" />
@@ -182,7 +182,8 @@
         <div class="d-none d-md-block col-md-2 bd-toc show">
             
         <div class="tocsection onthispage pt-5 pb-3">
-            <i class="fas fa-list"></i> Contents
+            <i class="fas fa-list"></i>
+            Contents
         </div>
         <nav id="bd-toc-nav">
             <ul class="nav section-nav flex-column">
@@ -299,7 +300,7 @@ systems for workshop attendees.</p>
 <td><p>Python &amp; Stata16</p></td>
 </tr>
 <tr class="row-odd"><td></td>
-<td><p>13:00 - 16:30pm</p></td>
+<td><p>14:00 - 17:30pm</p></td>
 <td><p>Working with Data (Pandas II) and Introduction to Web (Scrapping)</p></td>
 </tr>
 <tr class="row-even"><td><p>Tuesday, 30th March</p></td>
@@ -307,7 +308,7 @@ systems for workshop attendees.</p>
 <td><p>Python and Stata16</p></td>
 </tr>
 <tr class="row-odd"><td></td>
-<td><p>13:00 - 16:30pm</p></td>
+<td><p>14:00 - 17:30pm</p></td>
 <td><p>Automate data workflows</p></td>
 </tr>
 <tr class="row-even"><td><p>Thursday, 01st April</p></td>
@@ -315,7 +316,7 @@ systems for workshop attendees.</p>
 <td><p>Q&amp;A / Tutorials</p></td>
 </tr>
 <tr class="row-odd"><td></td>
-<td><p>14:00 - 15:00</p></td>
+<td><p>15:00 - 16:00</p></td>
 <td><p>Q&amp;A / Tutorials</p></td>
 </tr>
 </tbody>
