deploy: c436feebcb5c1ed51546f3f1abbdc0ac9c5c1ffe

--- a/week1/session1/python-for-economics.html
+++ b/week1/session1/python-for-economics.html
@@ -641,7 +641,7 @@ underlying data</p>
 </div>
 </div>
 <div class="figure align-default">
-<img alt="../../_images/tradeoff.pdf" src="../../_images/tradeoff.pdf" />
+<img alt="../../_images/tradeoff.png" src="../../_images/tradeoff.png" />
 </div>
 <div class="margin sidebar">
 <p class="sidebar-title"></p>
@@ -650,7 +650,7 @@ overcome some of these trade-offs by calling out routines to lower level
 libraries built in <code class="docutils literal notranslate"><span class="pre">c</span></code> and <code class="docutils literal notranslate"><span class="pre">fortran</span></code></p>
 </div>
 <div class="figure align-default">
-<img alt="../../_images/tradeoff2.pdf" src="../../_images/tradeoff2.pdf" />
+<img alt="../../_images/tradeoff2.png" src="../../_images/tradeoff2.png" />
 </div>
 <div class="margin sidebar">
 <p class="sidebar-title"></p>
@@ -660,7 +660,7 @@ build on top of newer modern technology using
 that often rivals C with a lot less code for programmers.</p>
 </div>
 <div class="figure align-default">
-<img alt="../../_images/tradeoff3.pdf" src="../../_images/tradeoff3.pdf" />
+<img alt="../../_images/tradeoff3.png" src="../../_images/tradeoff3.png" />
 </div>
 <div class="margin sidebar">
 <p class="sidebar-title"></p>
@@ -670,7 +670,7 @@ that enables programmers to obtain high speed <strong>when needed</strong>.
 efficient <code class="docutils literal notranslate"><span class="pre">LLVM</span></code> assembler that is highly automated.</p>
 </div>
 <div class="figure align-default">
-<img alt="../../_images/tradeoff4.pdf" src="../../_images/tradeoff4.pdf" />
+<img alt="../../_images/tradeoff4.png" src="../../_images/tradeoff4.png" />
 </div>
 <p>One of the strengths of <code class="docutils literal notranslate"><span class="pre">python</span></code> is its adaptability to many
 different contexts while retaining a very high level of
