deploy: bf06329d106f3212361975df99456c19c0fb1595

--- a/week2/session7/schedule.html
+++ b/week2/session7/schedule.html
@@ -452,6 +452,7 @@
 <div class="admonition-aims-outcomes admonition">
 <p class="admonition-title">Aims &amp; Outcomes:</p>
 <ol class="simple">
+<li><p>Using <code class="docutils literal notranslate"><span class="pre">python</span></code> with <code class="docutils literal notranslate"><span class="pre">stata</span></code> using files</p></li>
 <li><p>Using <code class="docutils literal notranslate"><span class="pre">stata</span></code> with <code class="docutils literal notranslate"><span class="pre">jupyter</span></code></p></li>
 </ol>
 </div>
